# space-mcp

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  prek.toml  pyproject.toml
.claude/: settings.json
scripts/: format-section-comments.py
src/space/: __main__.py  auth.py  client.py  clients.py  context.py  discussions.py  formatting.py  pagination.py  patronus.py  transport.py
src/space/cli/: api.py  app.py  auth.py  format.py  mr.py  mr_actions.py  run.py  status.py
src/space/mcp/: base.py  format.py  server.py  yaml_utils.py
src/space/models/: __init__.py  enums.py  patronus.py  space.py  status.py
src/space_mcp/: __main__.py  client.py
tests/: conftest.py  e2e_helpers.py  factories.py  sample_responses.py  test_auth.py  test_cli.py  test_client.py  test_client_e2e.py  test_context.py  test_effective_status.py  test_format.py  test_formatting.py  test_integration.py  test_integration_rw.py  test_main.py  test_models.py  test_pagination.py  test_patronus.py  test_patronus_e2e.py  test_transport.py
tests/cli/: conftest.py  test_app.py  test_auth.py  test_mr.py  test_run.py
tests/mcp/: test_base.py  test_format.py  test_server.py  test_server_e2e.py  test_yaml_utils.py
tests/models/: test_enums.py  test_patronus.py  test_space.py  test_status.py
