[project]
name = "space"
version = "1.0.0"
description = "CLI and MCP server for JetBrains Space"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "keyring>=25.0.0",
    "rich>=13.0.0",
    "ruamel.yaml>=0.18.0",
]

[project.scripts]
space = "space.__main__:main"
space-mcp = "space.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
each_dict_entry_on_separate_line = false
allow_split_before_dict_value = false
dedent_closing_brackets = true
coalesce_brackets = true

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pylint>=3.0.0",
    "ty>=0.0.25",
    "yapf>=0.40.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
env_files = [".env"]
markers = ["e2e: end-to-end tests requiring real Space/Patronus API access"]

[tool.ty.src]
exclude = ["tests/"]

[tool.ty.environment]
python-version = "3.11"
python = ".venv"
